# Ichor

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-asan  Dockerfile-asan-beast-deprecated  Dockerfile-asan-clang  Dockerfile-clang  Dockerfile-musl  Dockerfile-musl-aarch64  Dockerfile-musl-aarch64-bench  Dockerfile-musl-aarch64-bench-libcpp  Dockerfile-tsan  IchorConfig.cmake.in  LICENSE  README.md  benchmark.sh  build.sh  build_common.sh  cloc.sh  compile_osx.sh  debug.sh  generate_keys.sh  quickbuild.sh  sonar-project.properties  toolchain-i386.cmake
.github/: FUNDING.yml
.github/workflows/: cmake-internal-debug.yml  cmake.yml  coverage.yml
benchmarks/: .README.md.swp  CMakeLists.txt  README.md  wrk.lua
benchmarks/beast_benchmark/: boost_beast_benchmark.cpp  fields_alloc.hpp
benchmarks/coroutine_benchmark/: TestService.h  ichor_coroutine_benchmark.cpp  main.cpp
benchmarks/etcd_benchmark/: UsingEtcdService.h  main.cpp
benchmarks/event_benchmark/: TestService.h  ichor_event_benchmark.cpp  main.cpp
benchmarks/serializer_benchmark/: TestBundle.h  TestMsgJsonSerializer.h  TestService.h  ichor_serializer_benchmark.cpp  main.cpp
benchmarks/start_benchmark/: ConstructorInjectionTestService.h  TestService.h  ichor_start_benchmark.cpp  main.cpp
benchmarks/start_stop/: StartStopBundle.h  StartStopService.h  TestBundle.h  TestService.h  main.cpp
benchmarks/start_stop_benchmark/: StartStopService.h  TestService.h  ichor_start_stop_benchmark.cpp  main.cpp
benchmarks/utils_benchmark/: ichor_utils_benchmark.cpp
cmake/test_progs/: test_constexpr_unique_ptr.cpp  test_stacktrace.cpp  (+1 more)
docs/: 01-GettingStarted.md  02-CMakeOptions.md  02-DependencyInjection.md  03-CMakeOptions.md  04-ComparisonOtherLibraries.md  04-Downsides.md  04-WhyUseIchor.md  06-HttpsConnections.md  07-SharingState.md  08-AsyncIO.md  09-HttpServer.md  Downsides.md  Fundamentals.md  GettingStarted.md  Outdated-Fundamentals.md  xx-PresentationIdeas.md
examples/: CMakeLists.txt  test.cpp  test.h
examples/celix_example/: CelixService.cpp  CelixService.h  main.cpp
examples/common/: DebugService.h  TestMsg.h  TestMsgBoostJsonSerializer.h  TestMsgGlazeSerializer.h  TestMsgJsonSerializer.h  TestMsgRapidJsonSerializer.h  lyra.hpp
examples/etcd_example/: README.md  UsingEtcdService.h  main.cpp
examples/event_statistics_example/: README.md  UsingStatisticsService.h  main.cpp
examples/factory_example/: FactoryService.h  README.md  RuntimeCreatedService.h  TestService.h  main.cpp
examples/http_example/: README.md  UsingHttpService.h  main.cpp  server_certificate.h
examples/http_ping_pong/: PingMsg.h  PingMsgJsonSerializer.h  PingService.h  PongService.h  ping.cpp  pong.cpp
examples/introspection_example/: IntrospectionService.h  README.md  main.cpp
examples/minimal_example/: README.md  main.cpp
examples/multithreaded_example/: CustomEvent.h  OneService.h  OtherService.h  README.md  main.cpp
examples/optional_dependency_example/: OptionalService.h  README.md  TestService.h  main.cpp
examples/realtime_example/: AllocPoison.cpp  GlobalRealtimeSettings.cpp  GlobalRealtimeSettings.h  MemoryResources.h  OptionalService.h  README.md  TestService.h  main.cpp
examples/realtime_example/gsm_enc/: ChangeLog.txt  data.h  gsm_enc.cpp  gsm_enc.h  private.h
examples/serializer_example/: README.md  TestBundle.h  TestMsgJsonSerializer.h  TestService.h  main.cpp
examples/tcp_example/: README.md  TestMsgJsonSerializer.h  UsingTcpService.h  main.cpp
examples/timer_example/: README.md  UsingTimerService.h  main.cpp
examples/tracker_example/: README.md  RuntimeCreatedService.h  TestService.h  TrackerService.h  main.cpp
examples/websocket_example/: README.md  TestMsgJsonSerializer.h  UsingWsService.h  main.cpp
examples/yielding_timer_example/: README.md  UsingTimerService.h  main.cpp
include/: EventCallback.h
test/: AsyncAutoResetEventTests.cpp  AsyncFileIOTests.cpp  AsyncFileIOTests_uring.cpp  AsyncIOUringFileIOTests.cpp  AsyncManualResetEventTests.cpp  AsyncReturningManualResetEventTests.cpp  AsyncSingleThreadedMutexTests.cpp  CMakeLists.txt  Common.h  CommonTests.cpp  CoroutineTests.cpp  DependencyManagerTests.cpp  DependencyService.h  DependencyServicesTests.cpp  EtcdTests.cpp  EventHandlerService.h  FakeLifecycleManager.h  FilterTests.cpp  GettingStartedTests.cpp  HttpEndToEndTests.cpp  HttpTests.cpp  InterceptorService.h  InterceptorTests.cpp  MixingInterfacesService.h  OpenSSLCertificateTests.cpp  OpenSSLTests.cpp  QueueTests.cpp  QuitOnStartWithDependenciesService.h  RedisTests.cpp  SSLCerts.h  ServicesTests.cpp  StartStopOnSecondAttemptService.h  StlTests.cpp  TaskTests.cpp  TcpTests.cpp  TestEvents.h  UselessService.h  UtilTests.cpp  main.cpp
test/Mocks/: ConnectionServiceMock.h  HostServiceMock.h  LoggerMock.h  QueueMock.h
test/TestServices/: AddEventHandlerDuringEventHandlingService.h  AddInterceptorDuringEventHandlingService.h  AsyncBroadcastService.h  AsyncDependencyTrackerService.h  AsyncReturningManualResetEventService.h  AsyncUsingTimerService.h  AwaitReturnService.h  AwaitService.h  AwaitingDependencyService.h  ConstructorInjectionQuitService.h  ConstructorInjectionTestService.h  ConstructorInjectionTestServices.h  CreateTimerService.h  DependencyOfflineWhileStartingService.h  DependencyOnlineWhileStoppingService.h  DependencyService.h  DependencyTrackerService.h  EtcdUsingService.h  Etcdv2UsingService.h  Etcdv3UsingService.h  EventHandlerService.h  FailOnStartService.h  GeneratorService.h  HttpThreadService.h  ICountService.h  IOUringSleepService.h  InterceptorService.h  MixingInterfacesService.h  MultipleAwaitersService.h  MultipleSeparateDependencyRequestsService.h  QuitOnStartWithDependenciesService.h  RedisUsingService.h  RegistrationCheckerService.h  RemoveAfterAwaitedStopService.h  RequestsLoggingService.h  RequiredMultipleService.h  StopsInAsyncStartService.h  TcpService.h  TimerRunsOnceService.h  UselessService.h
test/certs/: csr.pem  key.pem
test/serialization/: RegexJsonMsg.h  RegexJsonMsgSerializer.h
(+447 files in other folders)
